fix jdk11 build (#108)
* fix jdk11 build

Signed-off-by: Olivier Lamy <olamy@apache.org>